--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -9,6 +9,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin:0px 200px;
 
 }
 .nav-title{
@@ -36,4 +37,16 @@ nav a{
     color: white;
     font-size: 20px;
     font-weight: 700;
+}
+/*header related style*/
+.header{
+    background-color: #FFF8F3;
+}
+.banner{
+    padding:30px 30px 30px 150px;
+display: flex;
+align-items: center;
+}
+.banner .profile-pic{
+    width: 500px;
 }
